--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
 <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
 
-  <title>Happy Birthday </title>
+  <title>Happy Birthday Shravani </title>
 </head>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Itim&display=swap');
@@ -162,7 +162,7 @@ svg.line{fill: none;stroke-width: 2;animation: moving .7s linear infinite altern
           </g>
         </svg>
     </div>
-    <p id="ket">Touch the Love!</p>
+    <p id="ket">Touch it!</p>
 
     <div class="kumpulanstiker">
       <!-- Stiker untuk Konten -->
@@ -190,7 +190,7 @@ svg.line{fill: none;stroke-width: 2;animation: moving .7s linear infinite altern
           </b></p>
 
         <p><b><img src="./assets/g5.gif" /><br>
-            <span class="ft">Happy Birthday! 🥳</span>
+            <span class="ft">Happy Birthday Shravani! 🥳</span>
           </b></p>
 
         <p><b><img src="./assets/mndkat.gif" /><br>
